<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scratch That Logo Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="animals">ANIMALS</string>
    <string name="brands">BRANDS</string>
    <string name="cars">CARS</string>
    <string name="cartoons">CARTOONS</string>
    <string name="celebrities">CELEBRITIES</string>
    <string name="cities">CITIES</string>

    <string name="confirmButtonLabel">OK</string>
    <string name="finishCategory">FINISH CATEGORY</string>
    <string name="great1">GREAT!</string>
    <string name="great2">you won</string>
    <string name="hints">Hints</string>
    <string name="hintsUsedForLevel">Hints for current level already used</string>
    <string name="howInfo">How to Play?</string>
    <string name="level">Level</string>
    <string name="loading">Loading</string>
    <string name="mute">Mute all sounds</string>
    <string name="moreapp">More Apps</string>
    <string name="noInternetConnection">No internet connection.</string>
    <string name="okButton">OK</string>
    <string name="play">PLAY</string>
    <string name="playNext">PLAY NEXT</string>
    <string name="pleaseWait">Please wait…</string>
    <string name="rateInfo">Rate</string>
    <string name="resetAllCategory">Reset all categories</string>
    <string name="resetGame">Reset Game</string>
    <string name="save">Save</string>
    <string name="saveScore">Save Score</string>
    <string name="score">Score</string>
    <string name="sound">Play all sounds</string>
    <string name="startPoint">0</string>
    <string name="title_top_score">Top Score</string>
    <string name="unknown">UNKNOWN</string>
    <string name="ups1">Upsss!</string>
    <string name="ups2">try again</string>
    
     <!-- play store application link i.e more apps -->
    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=gkcrop</string>
    
     <!-- Admob Banner and Intertestial Ad Id -->
    <string name="admob_publisher_id">ca-app-pub-1445347942946881/9575063868</string><!-- your admob banner id -->
    <string name="admob_intertestial_id">ca-app-pub-1445347942946881/2051797065</string><!-- your admob intertestail ad id -->
   
	<string name="howto">Scratch your screen until you figure out the logo and then click your guess. The more you scratch picture the more you score lose.Scratch it clevery,You Can not Scratch all the Screen</string>
</resources>
